--- a/src/views/sample.ejs
+++ b/src/views/sample.ejs
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     hello world
     <div>
-        <img src="/images/avt.png" alt="">
+        <img class="images" src="/images/avt.png" alt="">
     </div>
 </body>
 </html>
