--- a/src/public/css/home.css
+++ b/src/public/css/home.css
@@ -1,66 +1,127 @@
-*{
+* {
     margin: 0;
     padding: 0;
 }
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #333;
-  overflow: hidden;
+    background-color: #333;
+    overflow: hidden;
 }
 
 /* Style the links inside the navigation bar */
 .topnav a {
-  float: left;
-  color: #f2f2f2;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
+    float: left;
+    color: #f2f2f2;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+    font-size: 17px;
 }
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+    background-color: #ddd;
+    color: black;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
-  color: white;
+    background-color: #04AA6D;
+    color: white;
 }
 
-fieldset{
-    border: 4px solid #0e0d0d ;
+fieldset {
+    border: 4px solid #0e0d0d;
     pading: 20px;
 }
-legend{
+
+legend {
     font-size: 40px;
 }
-label{
+
+label {
     font-size: 20px;
     padding: 10px;
     display: inline-block;
-    
+
 }
-input{
+
+input {
     width: 30%;
 
 }
-input[type= city]{
+
+input[type=city] {
     width: 30%;
-    
-}
-button{
-     width: 5%;
-    padding: 10px;
-}
-label[for=city]{
-    padding-right:22px ;
-}
-.input_save{
-    padding: 10px;
-    
+
 }
 
+button {
+    width: 5%;
+    padding: 10px;
+}
+
+label[for=city] {
+    padding-right: 22px;
+}
+
+.input_save {
+    padding: 10px;
+
+}
+
+#customers {
+    font-family: Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#customers td,
+#customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+#customers tr:hover {
+    background-color: #ddd;
+}
+
+#customers th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #04AA6D;
+    color: white;
+}
+
+.container {
+    padding: 20px;
+    margin-top: 30px;
+    ;
+}
+
+.title {
+    margin-bottom: 20px;
+    font-size: 24px;
+    font-weight: bold;
+    color: #04AA6D;
+}
+
+button {
+   
+        background-color: #04AA6D;
+        /* Green */
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+    
+}
