--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -10,25 +10,45 @@
 
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="/create">Create User</a>
+
     </div>
-    <form action="create-user" method="post">
-        <fieldset>
-            <legend>Add new user</legend>
-            <label for="email">Email:</label>
-            <input type="text" id="emailId" name="email"><br><br>
-            <label for="name">Name:</label>
-            <input type="text" id="nameId" name="name"><br><br>
-            <label for="city">City:</label>
-            <input type="city" id="cityId" name="city"><br><br>
-            <div class="input_save">
-                <button>Save</button>
-            </div>
-        </fieldset>
-    </form>
+    <div class="container">
+        <div class="title">List Users</div>
+        <table id="customers">
+            <tr>
+                <%= JSON.stringify( listUsers) %>
+                <th>ID</th>
+                <th>Email</th>
+                <th>Name</th>
+                <th>City</th>
+                <th>Action</th>
+            </tr>
+            <tr>
+                <td></td>
+                <td>Alfreds Futterkiste</td>
+                <td>Maria Anders</td>
+                <td>Germany</td>
+                <td>
+                    <button>edit</button>
+                    <button>delete</button>
+                </td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Centro comercial Moctezuma</td>
+                <td>Francisco Chang</td>
+                <td>Mexico</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Centro comercial Moctezuma</td>
+                <td>Francisco Chang</td>
+                <td>Mexico</td>
+            </tr>
+        </table>
+    </div>
 </body>
 
 </html>
