--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -16,37 +16,37 @@
     </div>
     <div class="container">
         <div class="title">List Users</div>
+
         <table id="customers">
             <tr>
-                <%= JSON.stringify( listUsers) %>
                 <th>ID</th>
                 <th>Email</th>
                 <th>Name</th>
                 <th>City</th>
                 <th>Action</th>
             </tr>
-            <tr>
-                <td></td>
-                <td>Alfreds Futterkiste</td>
-                <td>Maria Anders</td>
-                <td>Germany</td>
-                <td>
-                    <button>edit</button>
-                    <button>delete</button>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Centro comercial Moctezuma</td>
-                <td>Francisco Chang</td>
-                <td>Mexico</td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Centro comercial Moctezuma</td>
-                <td>Francisco Chang</td>
-                <td>Mexico</td>
-            </tr>
+
+            <% listUsers.forEach((user, i)=> { %>
+                <tr>
+                    <td>
+                        <%= listUsers[i].id %>
+                    </td>
+                    <td>
+                        <%= listUsers[i].email %>
+                    </td>
+                    <td>
+                        <%= listUsers[i].name %>
+                    </td>
+                    <td>
+                        <%= listUsers[i].city %>
+                    </td>
+                    <td>
+                        <a href="/edit">Edit</a>
+                        <button>Delete</button>
+                    </td>
+                </tr>
+
+                <%}) %>
         </table>
     </div>
 </body>
