--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -10,19 +10,24 @@
 
 <body>
     <div class="topnav">
-        <a  href="/">Home</a>
+        <a href="/">Home</a>
         <a href="/create">Edit User</a>
-        
+
     </div>
-    <form action="create-user" method="post">
+    <form action="/update-user" method="post">
         <fieldset>
+
             <legend>Edit user</legend>
+
+            <label for="email">Id:</label>
+            <input type="hidden" value="<%=userEdit.id%>" name="id"><br><br>
+
             <label for="email">Email:</label>
-            <input type="text" id="emailId" name="email"><br><br>
+            <input type="text" value="<%=userEdit.email%>" name="email"><br><br>
             <label for="name">Name:</label>
-            <input type="text" id="nameId" name="name"><br><br>
+            <input type="text" value="<%=userEdit.name%>" name="name"><br><br>
             <label for="city">City:</label>
-            <input type="city" id="cityId" name="city"><br><br>
+            <input type="city" value="<%=userEdit.city%>" name="city"><br><br>
             <div class="input_save">
                 <button>Save</button>
             </div>
