--- a/src/views/edit.ejs
+++ b/src/views/edit.ejs
@@ -20,7 +20,7 @@
             <legend>Edit user</legend>
 
             <label for="email">Id:</label>
-            <input type="hidden" value="<%=userEdit.id%>" name="id"><br><br>
+            <input type="text" value="<%=userEdit.id%>" name="id"><br><br>
 
             <label for="email">Email:</label>
             <input type="text" value="<%=userEdit.email%>" name="email"><br><br>
