--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -42,7 +42,10 @@
                     </td>
                     <td>
                         <a href="/edit/<%=user.id %>">Edit</a>
-                        <button>Delete</button>
+                        <form action="/delete-user/<%=user.id %>" method="post">
+                            <button>Delete</button>
+                        </form>
+                       
                     </td>
                 </tr>
 
