case 2 to get delete

--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -42,9 +42,7 @@
                     </td>
                     <td>
                         <a href="/edit/<%=user.id %>">Edit</a>
-                        <form action="/delete-user/<%=user.id %>" method="post">
-                            <button>Delete</button>
-                        </form>
+                        <a href="/delete-user/<%=user.id %>">Delete</a>
                        
                     </td>
                 </tr>
